FIXED format card spacing for blogs

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -44,7 +44,7 @@
   }
 
   .blogcard {
-      margin: 20px 40px 50px 40px;
+      margin: 10px 20px 20px 20px;
       min-width: 90vw;
   }
 
